# bt-rename

./: .gitignore  README.md  example.sh  pyproject.toml
scripts/: install-systemd.sh  uninstall-systemd.sh
src/bt_rename/: rename.py  rename_plan.py  rename_plan_prompt.txt
systemd/: on-torrent-finished.socket  on-torrent-finished@.service
tests/: test_rename.py
